test/fail/basic_syntax/bad_right_brace.lily
#[
SyntaxError: Unexpected token ']'.
    from bad_right_brace.lily:6:
]#

var a: List[Integer] = []   a = [10]]
